TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "131288296586304" [label="Start"];
  "131288296586304" -> "131288296585248";
  "131288296585248" [label="Code"];
  "131288296585248" -> "131288296584240";
  "131288296584240" [label="Function"];
  "131288296584240" -> "131288296573824";
  "131288296584240" -> "131288296587072";
  "131288296584240" -> "131288296582608";
  "131288296573824" [label="main"];
  "131288296587072" [label="Parameters"];
  "131288296582608" [label="Code"];
  "131288296582608" -> "131288296585728";
  "131288296582608" -> "131288296577424";
  "131288296585728" [label="Code"];
  "131288296585728" -> "131288296586400";
  "131288296586400" [label="Declaration"];
  "131288296586400" -> "131288296575552";
  "131288296586400" -> "131288296585968";
  "131288296575552" [label="x"];
  "131288296585968" [label="1"];
  "131288296577424" [label="Code"];
  "131288296577424" -> "131288296583520";
  "131288296583520" [label="Declaration"];
  "131288296583520" -> "131288296585344";
  "131288296583520" -> "131288296576224";
  "131288296585344" [label="x"];
  "131288296576224" [label="2"];
}
